--- a/Bonsai.Editor/GraphView/WorkflowEditorControl.resx
+++ b/Bonsai.Editor/GraphView/WorkflowEditorControl.resx
@@ -120,4 +120,7 @@
   <metadata name="lightTheme.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>13, 9</value>
   </metadata>
+  <metadata name="darkTheme.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 9</value>
+  </metadata>
 </root>
