Offer to delete file on visualizer layout error

--- a/Bonsai.Editor/Properties/Resources.resx
+++ b/Bonsai.Editor/Properties/Resources.resx
@@ -348,6 +348,14 @@ NOTE: You will have to restart Bonsai for any changes to take effect.</value>
   <data name="SelectVisualizerMenuItem" xml:space="preserve">
     <value>Select Visualizer</value>
   </data>
+  <data name="VisualizerLayoutCorrupt_Question" xml:space="preserve">
+    <value>{0}
+
+The visualizer layout may be corrupt. Do you want to delete the layout file?</value>
+  </data>
+  <data name="VisualizerLayout_Caption" xml:space="preserve">
+    <value>Visualizer Layout</value>
+  </data>
   <data name="BrowseDirectoryMenuImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
