--- a/Bonsai.Core/Properties/Resources.resx
+++ b/Bonsai.Core/Properties/Resources.resx
@@ -126,6 +126,9 @@
   <data name="Exception_IndexerNotFound" xml:space="preserve">
     <value>No indexer with matching number of arguments is defined for type '{0}'.</value>
   </data>
+  <data name="Exception_InvalidPropertyValue" xml:space="preserve">
+    <value>Property value is not valid.</value>
+  </data>
   <data name="Exception_InvalidTypeNamespace" xml:space="preserve">
     <value>Unable to resolve the XML type '{0}' without a valid clr-namespace.</value>
   </data>
