Add status icon for main workflow file
In packages with multiple workflows or extensions, it can be useful to
see at a glance which ones may be called when running the gallery
package.

--- a/Bonsai.NuGet.Design/Properties/Resources.resx
+++ b/Bonsai.NuGet.Design/Properties/Resources.resx
@@ -494,4 +494,16 @@
         OsfRXbPuG9z2Ik1iFDFVAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="GalleryWorkflowImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAACUAAAAlAVX3UsYAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABLUlEQVQ4T61Sy0rDQBTNyg8RQXTTrYK4UGmrVBBEoaAL/0KqIgiCIOJKqW58LH0spPVT0voRTSfF
+        SWZCzBy5gwkZI4kRDxzmMjPn3DOXsSwT+ANNgzL4N4PvkQqZMUhD+QLypQO/fa1X5fnGea5B2OuDLVTh
+        nZxitL2DwfgkhrPzCG3bEKXrxIA6k9i/vIKSEogiuBtNuI01sMUalBD5BhTXma5APj5DBUFyCUph1NyC
+        7HQTUQzDgDp7Z+eIHAdB9xXy4Qn+RRu8daCfQue5BpSAVVcwmJiCu74JcXuvhTELE9C0aWDDmTnwo2Mo
+        ziFu7vQeW6oXz4AQ2j2w5VXw/UMtft/dA6s38NF/M0TpOvsPhNBx6R/QLOLOMb5EaWY2fkMDsKyxEvzR
+        oDQTfAINv1IG4txJxQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
